# mapmindver2

./: .gitignore  AWS_EC2_DEPLOYMENT.md  Analytics2.py  BEDROCK_MIGRATION_SUMMARY.md  EC2_COMPLETE_SETUP.md  QUICK_FIX.md  README.md  START_HERE.md  check_flows.py  fix_dependencies.sh  fix_frontend_api.sh  setup_bedrock.sh  test_backend.py  test_bedrock.py  test_flow_creation.py  test_pdf_endpoint.py  test_pdf_processing.py
backend/: .env.bedrock  .env.example  BEDROCK_MIGRATION.md  app.py  pyproject.toml  requirements-minimal.txt  requirements-test.txt  requirements.txt  sqlite_data.db  start_app.py  switch_models.py  test_bedrock.py  test_import.py
backend/CSVVectorStore/: chroma.sqlite3
backend/Models/: model.py
backend/SQLTemp/: InsertTemp.py
backend/SQLVectorStore/: chroma.sqlite3
backend/vanna/base/: base.py
examples/: Amazon.com, Inc. (AMZN) Balance Sheet - Yahoo Finance.html  Generative-AI-presentation-faculty-for-students.pptx
frontend/: .env.development  .env.production  .prettierrc  API_CONFIGURATION.md  API_CONFIGURATION_GUIDE.md  BEDROCK_FRONTEND_UPDATE.md  PDF_PROCESSING_GUIDE.md  config.json  eslint.config.js  package-lock.json  package.json  test-api-connection.js  update-api-url.bat  update-api-url.sh  update-ip.js  vite.config.js
frontend/src/: App.jsx  Landing.jsx  index.css  main.jsx
frontend/src/config/: api.js  config-manager.js  setDataSource.js  setDataSourceModal.js  setFollowUp.js  setQuestionApi.js  setRequestData.js
frontend/src/global-components/: AddDataSource.jsx  AskMultiple.jsx  DataSourceSelect.jsx  Drawer.jsx  ExampleCards.jsx  Flow.jsx  Graph.jsx  Header.jsx  LandingCards.jsx  Modal.jsx  Prompts.jsx  TableComponent.jsx  TestimonialCards.jsx
frontend/src/helpful-components/: InputBar.jsx
frontend/src/hooks/: useCreateEdges.js  useCreateNodes.js
frontend/src/modals/: AudioModal.jsx  CSVModal.jsx  DocxModal.jsx  ErrorModal.jsx  FlowModal.jsx  FlowSummary.jsx  HTMLModal.jsx  ImgModal.jsx  LoadingModal.jsx  MDModal.jsx  PDFModal.jsx  PDFProcessingModal.jsx  PDFProcessingStatusModal.jsx  PPTXModal.jsx  PromptModal.jsx  SQLModal.jsx  TextModal.jsx  VideoModal.jsx  WEBModal.jsx  YTModal.jsx
frontend/src/nodes/: DataSource.jsx  DataSourceContainer.jsx  DataSourceSet.jsx  FileUploader.jsx  FollowUpQuestionNode.jsx  PromptSelector.jsx  QuestionNode.jsx  ResponseNode.jsx  ResponsePdf.jsx  nodeTypes.js
frontend/src/prompts/: promptsModel.js
frontend/src/stores/: errorStore.js  flowStore.js  modalStore.js  store.js
frontend/src/utils/: financeTerms.js  setLayout.js  setUpHex.js
