[tool.poetry]
name = "gnosis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.11"
camelot-py = "*"
aiosignal = "1.3.2"
aiosqlite = "0.20.0"
altair = "5.5.0"
amazon-textract-response-parser = "1.0.3"
annotated-types = "0.7.0"
anyio = "4.9.0"
arabic-reshaper = "3.0.0"
asgiref = "3.8.1"
asn1crypto = "1.5.1"
attrs = "24.3.0"
backoff = "2.2.1"
bcrypt = "4.2.1"
beautifulsoup4 = "4.12.3"
blinker = "1.9.0"
boto3 = "1.35.90"
botocore = "1.35.90"
build = "1.2.2.post1"
cachetools = "5.5.0"
certifi = "2024.12.14"
cffi = "1.17.1"
chardet = "5.2.0"
charset-normalizer = "3.4.1"
chroma-hnswlib = "0.7.6"
click = "8.1.8"
cohere = "5.13.8"
colorama = "0.4.6"
coloredlogs = "15.0.1"
contourpy = "1.3.1"
crawl4ai = "<0.4.245"
cryptography = "44.0.0"
cssselect2 = "0.7.0"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
decorator = "5.2.1"
defusedxml = "0.7.1"
deprecated = "1.2.15"
diskcache = "5.6.3"
distro = "1.9.0"
dnspython = "2.7.0"
docstring-parser = "0.16"
docx = "0.2.4"
durationpy = "0.9"
elixir = "0.7.1"
emoji = "2.14.0"
eval-type-backport = "0.2.2"
fake-http-header = "0.3.5"
fastapi = "0.115.6"
fastavro = "1.10.0"
filelock = "3.16.1"
filetype = "1.2.0"
flasgger = "0.9.7.1"
flask = "3.1.0"
flask-sock = "0.7.0"
flatbuffers = "24.12.23"
fonttools = "4.55.3"
frozenlist = "1.5.0"
fsspec = "2024.12.0"
geopandas = "1.0.1"
gmft = "0.4.0"
google-ai-generativelanguage = "0.6.10"
google-api-core = "2.24.0"
google-api-python-client = "2.156.0"
google-auth = "2.37.0"
google-auth-httplib2 = "0.2.0"
google-cloud-aiplatform = "1.85.0"
google-cloud-bigquery = "3.30.0"
google-cloud-core = "2.4.3"
google-cloud-resource-manager = "1.14.2"
google-cloud-storage = "2.19.0"
google-crc32c = "1.7.1rc1"
google-genai = "1.5.0"
google-generativeai = "0.8.3"
google-resumable-media = "2.7.2"
googleapis-common-protos = "1.66.0"
greenlet = "3.1.1"
grpc-google-iam-v1 = "0.14.2"
grpcio = "1.68.1"
grpcio-status = "1.68.1"
h11 = "0.14.0"
html5lib = "1.1"
httpcore = "1.0.7"
httplib2 = "0.22.0"
httptools = "0.6.4"
httpx = "0.28.1"
httpx-sse = "0.4.0"
huggingface-hub = "0.27.0"
humanfriendly = "10.0"
idna = "3.10"
img2pdf = "0.5.1"
importlib-metadata = "8.5.0"
importlib-resources = "6.4.5"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.5"
jiter = "0.8.2"
jmespath = "1.0.1"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpath-python = "1.0.6"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
kaleido = "0.2.1"
kiwisolver = "1.4.8"
kubernetes = "31.0.0"
langchain = "0.3.13"
langchain-community = "0.3.13"
langchain-core = "0.3.28"
langchain-experimental = "0.3.4"
langchain-openai = "0.2.14"
langchain-text-splitters = "0.3.4"
langdetect = "1.0.9"
langsmith = "0.2.6"
lida = "0.0.14"
llmx = "0.0.21a0"
lxml = "5.3.0"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
marshmallow = "3.23.2"
matplotlib = "3.10.0"
matplotlib-venn = "1.1.1"
mdurl = "0.1.2"
mistune = "3.1.0"
mizani = "0.13.1"
mmh3 = "5.0.1"
mockito = "1.5.3"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
narwhals = "1.22.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
nltk = "3.9.1"
numpy = "1.26.4"
oauthlib = "3.2.2"
olefile = "0.47"
onnx = "1.17.0"
onnxruntime = "1.20.1"
openai = "1.58.1"
opencv-python = "4.11.0.86"
opentelemetry-api = "1.29.0"
opentelemetry-exporter-otlp-proto-common = "1.29.0"
opentelemetry-exporter-otlp-proto-grpc = "1.29.0"
opentelemetry-instrumentation = "0.50b0"
opentelemetry-instrumentation-asgi = "0.50b0"
opentelemetry-instrumentation-fastapi = "0.50b0"
opentelemetry-proto = "1.29.0"
opentelemetry-sdk = "1.29.0"
opentelemetry-semantic-conventions = "0.50b0"
opentelemetry-util-http = "0.50b0"
orjson = "3.10.12"
oscrypto = "1.3.0"
overrides = "7.7.0"
packaging = "24.2"
pandas = "2.2.3"
parameterized = "0.9.0"
patsy = "1.0.1"
pbr = "6.1.1"
pdf2image = "1.17.0"
pdfminer-six = "20250324"
pi-heif = "0.22.0"
pikepdf = "9.4.2"
pillow = "10.4.0"
playwright = "1.49.1"
plotly = "5.24.1"
plotnine = "0.14.5"
pluggy = "1.5.0"
posthog = "3.7.4"
propcache = "0.2.1"
proto-plus = "1.25.0"
protobuf = "5.29.2"
psutil = "6.1.1"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pycparser = "2.22"
pycryptodome = "3.22.0"
pydantic-settings = "2.7.0"
pyee = "12.0.0"
pygments = "2.18.0"
pyhanko = "0.25.3"
pyhanko-certvalidator = "0.26.5"
pymongo = "4.10.1"
pyogrio = "0.10.0"
pyopenssl = "25.0.0"
pyparsing = "3.2.0"
pypdf = "5.1.0"
pypdfium2 = "4.30.1"
pyproj = "3.7.0"
pyproject-hooks = "1.2.0"
pyreadline3 = "3.5.4"
pytesseract = "0.3.13"
pytest = "8.3.4"
pytest-mockito = "0.0.4"
python-bidi = "0.6.3"
python-dateutil = "2.9.0.post0"
python-docx = "1.1.2"
python-dotenv = "1.0.1"
python-iso639 = "2024.10.22"
python-magic = "0.4.27"
python-multipart = "0.0.20"
python-oxmsg = "0.0.1"
python-pptx = "1.0.2"
pytz = "2024.2"
pyyaml = "6.0.2"
qrcode = "8.0"
rank-bm25 = "0.2.2"
rapidfuzz = "3.11.0"
referencing = "0.36.1"
regex = "2024.11.6"
reportlab = "4.2.5"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.22.3"
rsa = "4.9"
s3transfer = "0.10.4"
safetensors = "0.4.5"
scipy = "1.15.1"
seaborn = "0.13.2"
setuptools = "75.6.0"
shapely = "2.0.6"
shellingham = "1.5.4"
simple-websocket = "1.1.0"
six = "1.17.0"
sniffio = "1.3.1"
snowballstemmer = "2.2.0"
soupsieve = "2.6"
sqlalchemy-migrate = "0.11.0"
sqlparse = "0.5.3"
starlette = "0.41.3"
statsmodels = "0.14.4"
svglib = "1.5.1"
sympy = "1.13.1"
tabulate = "0.9.0"
tempita = "0.6.0"
tenacity = "9.0.0"
textract-trp = "0.1.3"
tf-playwright-stealth = "1.1.0"
tiktoken = "0.8.0"
timm = "1.0.15"
tinycss2 = "1.4.0"
tokenizers = "0.20.3"
torch = "2.5.1"
torchvision = "0.20.1"
tqdm = "4.67.1"
transformers = "4.46.3"
typer = "0.15.1"
types-requests = "2.32.0.20241016"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
tzlocal = "5.2"
unstructured = "0.17.2"
unstructured-inference = "0.8.10"
uritemplate = "4.1.1"
uritools = "4.0.3"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
watchfiles = "1.0.3"
webencodings = "0.5.1"
websocket-client = "1.8.0"
websockets = "14.1"
werkzeug = "3.1.3"
wordcloud = "1.9.4"
wrapt = "1.17.0"
wsproto = "1.2.0"
xhtml2pdf = "0.2.16"
xlsxwriter = "3.2.2"
xxhash = "3.5.0"
yarl = "1.18.3"
zipp = "3.21.0"
langchain-chroma = "^0.2.2"
pydantic = "2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
